--- a/cartstyle.css
+++ b/cartstyle.css
@@ -54,7 +54,45 @@
     height: 150px;
     width: 150px;
     margin-left: -700px;
-    
+    margin-top: 25px;
+}
+.cartcardtitle{
+    display: inline-block;
+    margin-left: 30px ;
+    margin-top: 30px ;
+    position: absolute;
+}
+.categ{
+    display: inline-block;
+    margin-left: 30px ;
+    margin-top: 60px ;
+    position: absolute;
+}
+.quantity{
+    display: inline-block;
+    margin-left: 30px ;
+    margin-top: 150px ;
+    position: absolute;
+}
+.price{
+    display: inline-block;
+    margin-left: 250px ;
+    margin-top: 80px ;
+    position: absolute;
+}
+.totalprice{
+    display: inline-block;
+    margin-left: 610px ;
+    margin-top: 80px ;
+    position: absolute;
+}
+.counterinput{
+    display: inline-block;
+    margin-left: 410px ;
+    margin-top: 80px ;
+    position: absolute;
+    width: 100px;
+    text-align: center;
 }
 
 
