--- a/products-style.css
+++ b/products-style.css
@@ -36,3 +36,28 @@
     font-size: 16px;
     font-weight: 600;
 }
+.markForDis{
+    height: 20px;
+    width: px;
+    position: absolute;
+    background-color: red;
+    display: inline-block;
+    font-size: 15px;
+    margin-top: -270px;
+    margin-left: -250px;
+}
+.favIconDiv{
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    margin-left: -33px;
+    margin-top: 10px;
+    cursor: pointer;
+    display: inline-block;
+}
+i{
+    font-size: 20px;
+    color: white;
+}
+
+
