--- a/products-style.css
+++ b/products-style.css
@@ -1,7 +1,7 @@
 .card{
     display: inline-block;
     border: solid 1px black;
-    height: 360px;
+    height: 400px;
     width: 250px;
     margin: 30px;
     text-align: center;
@@ -59,5 +59,35 @@ i{
     font-size: 20px;
     color: white;
 }
-
+.size{
+    margin-top: 5px;
+}
+#fillterByPrice{
+    display: inline-block;
+    width: 45%;
+    height: 100px;
+    text-align: center;
+}
+#priceLable{
+    font-size: 20px;
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.indecator{
+    width: 40px;
+    text-align: center;
+}
+#fillterBySize{
+    display: inline-block;
+    width: 45%;
+    height: 100px;
+    text-align: center;
+}
+#sizeLable{
+    font-size: 20px;
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
 
