--- a/cartstyle.css
+++ b/cartstyle.css
@@ -153,6 +153,14 @@
     margin-top: 20px;
     margin-right: 230px;
 }
-
+.markForDis{
+    height: 20px;
+    position: absolute;
+    background-color: red;
+    display: inline-block;
+    font-size: 15px;
+    margin-left: -162px ;
+    margin-top: 5;
+}
   
  
