--- a/Style.css
+++ b/Style.css
@@ -5,9 +5,10 @@
     flex-direction: row;
     position: fixed;
     
-    left: 39%;
+    left: 36%;
     bottom: 0;
     z-index: 1000;
+
 
 }
 
@@ -15,13 +16,14 @@
 
 .FOOTbtn{
     display: flex;
-    justify-content: center;
-    
+    justify-content: space-between;
+    align-items: center;
     border-radius: 50%;
     border: 0px wheat solid;
-    height: 65px;
-    width: 65px;
-    margin: 30px;
+  
+    height: 40px;
+    width: 40px;
+    margin: 40px;
     box-shadow: 0  0 10px 10px rgba(144, 144, 144, 0.347);
     
 }
@@ -33,12 +35,15 @@
       #b2,
       #b3{
           display: flex;
-          justify-content: center;
-          height: 60px;
-          align-items: center;
+          
+          justify-content: space-around;
+            width: 15px;
+          height: 5px;
+          
           flex: 100%;
           
       }
+      
     #searchID{
         border-radius: 30px;
         z-index: 1000;
