--- a/cartstyle.css
+++ b/cartstyle.css
@@ -186,10 +186,95 @@
     cursor: pointer;
 
 }
-/* #buyBtn:hover {
+h2{
+    font-family: myFont;
+    font-size: 19px;  
+    margin-left: 10px; 
+    margin-bottom: 30px;
+}
+#empityParag{
+    font-family: myFont;
+    font-size: 19px;
+}
+#bestSel{
+    font-family: myFont;
+    font-size: 19px;
+}
+
+#empitycartbtn{
+    margin-top: 10px;
+    height: 50px;
+    width: 30%;
+    font-family: myFont;
+    font-size: 17px;
+    background-color: white;
+    transition: all .5s;
+    margin-bottom: 40px;
+}
+#empitycartbtn:hover {
     background-color: black;
     color: white;
     cursor: pointer;
-  } */
-  
- 
+  }
+
+.cardemp{
+    display: inline-block;
+    border: solid 1px black;
+    height: 400px;
+    width: 250px;
+    margin: 30px;
+    text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    float: left;
+    transition: all .5s;
+}
+.dicountedEmb{
+    display: inline-block;
+    margin-block: 5px;
+    width: 65%;
+    color: red;
+    font-size: 16px;
+    font-weight: 600;
+}
+.sizeEmp{
+    margin-top: 5px;
+}
+.favIconDiv{
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    margin-left: -33px;
+    margin-top: 10px;
+    cursor: pointer;
+    display: inline-block;
+}
+i{
+    font-size: 20px;
+    color: white;
+}
+.markForDisEmp{
+    height: 20px;
+    position: absolute;
+    background-color: red;
+    display: inline-block;
+    font-size: 15px;
+    margin-top: -270px;
+    margin-left: -250px;
+}
+.addtocart{
+    margin-top: 10px;
+    height: 30px;
+    width: 80%;
+    font-family: myFont;
+    background-color: white;
+    transition: all .5s;
+}
+.addtocart:hover {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+  }
+@font-face {
+    font-family: myFont;
+    src: url(./Fonts/Poppins-Medium.ttf);
+}
