HANDLE THE PROJECT

--- a/cart/cartstyle.css
+++ b/cart/cartstyle.css
@@ -276,5 +276,5 @@ i{
   }
 @font-face {
     font-family: myFont;
-    src: url(./Fonts/Poppins-Medium.ttf);
+    src: url(../Fonts/Poppins-Medium.ttf);
 }
