--- a/footer/FooterStyles.css
+++ b/footer/FooterStyles.css
@@ -7,7 +7,7 @@ body {
 
 footer {
     background-color: #14202E;
-    color: #EFCFA0;
+    color: white;
     padding: 20px;
     text-align: center;
     position: absolute;
@@ -18,7 +18,7 @@ footer {
 .social-media a,
 .team a,
 .footer-links a {
-    color: #EFCFA0;
+    color: white;
     text-decoration: none;
     margin: 0 10px;
     font-size: 1.2em;
@@ -27,7 +27,7 @@ footer {
 .social-media a:hover,
 .team a:hover,
 .footer-links a:hover {
-    color: #ddd;
+    color: #E1A140;
 }
 
 .social-media {
@@ -49,5 +49,5 @@ footer {
 
 .footer-copy {
     font-size: 0.8em;
-    color: #EFCFA0;
+    color: white;
 }
