--- a/login/login-style.css
+++ b/login/login-style.css
@@ -35,7 +35,7 @@ input, select {
 button {
     width: 100%;
     padding: 12px;
-    background-color: #007bff;
+    background-color:  #14202E;
     color: #ffffff;
     border: none;
     border-radius: 4px;
