fixing or adding some bugs!!

--- a/cart/cartstyle.css
+++ b/cart/cartstyle.css
@@ -15,7 +15,8 @@
 #carthead{
     height: 50px;
     width: 70%;
-    background-color: rgb(230, 230, 214);
+    background-color: #14202E;
+    color: white;
     
 }
 #productdiv{
