--- a/cart/cartstyle.css
+++ b/cart/cartstyle.css
@@ -308,6 +308,7 @@ footer {
     bottom: 0;
     flex-shrink: 0; /* Keeps the footer at the bottom */
     width: 96.7%;
+    margin-top: 200px;
 }
 
 .social-media a,
