--- a/Account Info/MyAccount.css
+++ b/Account Info/MyAccount.css
@@ -45,7 +45,7 @@ body {
         font-size: 35px;
         margin-top: 120px;
         padding-bottom: 10px;
-        color: #000000; 
+        color: #14202E; 
         letter-spacing: 2px; 
     }
     
@@ -65,7 +65,7 @@ body {
         font-size: 25px;
         margin: 10px auto; 
         text-align: start; 
-        background-color: #333;
+        background-color: #2a4668;
         padding: 15px;
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
