--- a/cart/cartstyle.css
+++ b/cart/cartstyle.css
@@ -1,4 +1,77 @@
+/*
+style of header
+*/
+#MyDiv{
+    display:flex;
+    width: 100%;
+    height: 100px;
+    background-color: #14202E;
+    position:absolute;
+    top : 0;
+    z-index :1000;
+    left : 0px;
+    padding : 0px;
+    margin :0px;
+}
 
+#logo{
+    width :220px;
+    position:absolute;
+    height :140px;
+    left :5%;
+    top :-13px;
+}
+#lis{
+    display: inline-block;
+    width : fit-content;
+    background-color :rgba(245, 222, 179, 0);
+    Color :#f6ead9;
+    position : absolute;
+    left :34%;
+    top :30px;
+    color :#f4f4f4;
+}
+#c1,
+#c2,
+#c3,
+#c4,
+#c5,
+#c6,
+#c7{
+    display: inline;
+    margin: 7px;
+    background-color: rgba(245, 222, 179, 0);
+    border :0;
+    font-size: 15px;
+
+}
+#CartIcon{
+    position:absolute;
+    height :25px;
+    top :33px;
+    right: 120px;
+    cursor :pointer;
+
+
+
+}
+#HearIcon{
+    position:absolute;
+    height :25px;
+    bottom :40px;
+    top :33px;
+    right: 170px;
+    cursor :pointer;
+
+}
+
+
+/*
+end
+*/
+
+
+    
 #h2Text{
     margin-top: 130px;
 }
@@ -7,25 +80,30 @@
     font-family: myFont;
 }
 #empitycartbtn{
-    width:"250px";
-    height:"100px";
-    margin:"auto";
-    display: "block";
+    width:250px;
+    height:100px;
+    margin:auto;
+    display: inline-block;
 }
 #carthead{
     height: 50px;
     width: 70%;
     background-color: #14202E;
     color: white;
+    position: relative;
     
 }
 #productdiv{
     display: inline-block;
     height: 100%;
     width: 35%;
-    margin-left: -300px;
-    padding-right: 50px;
+   
     text-align: center;
+    position: absolute;
+    left: -100px;
+    font-size: 16px;
+    top: -5px;
+
 
 
 }  
@@ -33,7 +111,10 @@
     display: inline-block;
     height: 100%;
     width: 20%;
-    padding-left: 50px;
+    position: absolute;
+    right:290px;
+    font-size: 18px;
+    top: -5px;
 
     
 } 
@@ -41,88 +122,134 @@
     display: inline-block;
     height: 100%;
     width: 20%;
+    position: absolute;
+    right:80px;
+    font-size: 18px;
+    top: -5px;
+
 } 
 #totaldiv{
     display: inline-block;
     height: 100%;
     width: 20%;
-    margin-right: -250px;
+    position: absolute;
+    right:-60px;
+    font-size: 18px;
+    top: -5px;
 
 } 
 .cartcarddiv{
+    position: relative;
     width: 70%;
-    height: 200px;
-    border: 1px solid black ;
-    margin-block: 3px;
+    height:170px;
+    /* background-color: #f4a303; */
+    background-color: #d4d4d4;
+    border-radius: 0 5px 5px 0;
+    /* border: 2px solid #14202E ; */
+    margin-top: 20px;
     text-align: center;
+    box-shadow: 0px .5px 8px 1px #d2d2d2;
     
 }
 .cartcardimg{
-    height: 100%;
-    width: 150px;
-    margin-left: -705px;
+    height: 170px;
+    width: 200px;
+    position: absolute;
+    left: 0;
 }
 .cartcardtitle{
     display: inline-block;
-    margin-left: 30px ;
-    margin-top: 30px ;
     position: absolute;
+    text-align: center;
+    border-radius: 0 5px 5px 0;
+    display: flex;
+    justify-content: center;
+    left: 18.9%;
+    top: -18px;
+    background-color: #14202e94  ;
+    color: #d4d4d4;
+    padding: 4px;
+    margin-bottom: 10px;
+    font-size: 18px;
+
 }
 .categ{
     display: inline-block;
-    margin-left: 30px ;
-    margin-top: 60px ;
+  
     position: absolute;
+    top:71px;
+    left:420px;
+    font-size: 16px;
 }
 .quantity{
     display: inline-block;
-    margin-left: 30px ;
-    margin-top: 150px ;
+   
     position: absolute;
+    top:71px;
+    font-size: 16px;
+    
+    left:22% ;
 }
 .price{
-    display: inline-block;
-    margin-left: 250px ;
-    margin-top: 80px ;
     position: absolute;
+
+    display: inline-block;
+ 
+    top:71px;
+    left:630px;
+    color: #14202E;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 400;
     
 }
 .dicounted{
     display: inline-block;
-    margin-left: 270px ;
-    margin-top: 80px ;
+
     position: absolute;
-    color: red;
+    top:45px;
+    left:630px;
+    color: #14202E;
     font-size: 16px;
     font-weight: 600;
 }
 .totalprice{
     display: inline-block;
-    margin-left: 610px ;
-    margin-top: 80px ;
+
     position: absolute;
+    top:71px;
+    font-size: 16px;
+
+    left:990px ;
     font-size: 16px;
     font-weight: 600;
 }
 .counterinput{
     display: inline-block;
-    margin-left: 410px ;
-    margin-top: 80px ;
+  
+    background-color: #14202e94;
+    border: 0;
+    border-radius: 5px;
+    color: #cfcfcf;
     position: absolute;
     width: 100px;
+    height: 20px;
+    top:88px;
+    font-size: 16px;
+
+    left:820px ;
     text-align: center;
 }
 #sidediv{
+    background-color: #d4d4d4;
+    height: 400px;
+    width: 27.5%;
     display: inline-block;
-    background-color: rgb(252, 248, 248);
-    height: 500px;
-    width: 25%;
-    display: inline-block;
-    position: absolute;
-    margin-left: 270px;
+    position: absolute ;
+    right:15px; 
     margin-top: -50px;
+    box-shadow: 0px .5px 8px 1px #d2d2d2;
+    border-radius: 5px;
+
 
 }
 #governorate{
@@ -149,46 +276,79 @@
 }
 .remove{
     display: inline-block;
-    margin-left: 680px ;
-    margin-top: 20px ;
+
     position: absolute;
+    text-align: center;
+    right: 10px;
+    color: white;
+    border: 0;
+    background-color: #14202e94;
+    border-radius: 50%;
+    font-weight: 800;
+    font-size: 14px;
+    top: 10px;
+
 }
 #Subtotal{
     display: inline-block;
-    margin-top: 40px;
+    position: relative;
+    margin-top: 100px;
+    font-size: 20px;
     width: 40%;
     margin-right: 60px;
+    font-weight: bold;
 }
 #SubtotalAmount{
     display: inline-block;
-    margin-top: 5px;
-    width: 40%;
+    margin-top: 100px;
+    font-size: 20px;
+     width: 40%;
+     text-decoration-line: underline;
+     font-weight: bolder;
+     
 
 }
 .markForDis{
     height: 20px;
     position: absolute;
-    background-color: red;
+    background-color:red;
+    color: #14202E  ;
+    left: 0px;
+    bottom: 0px;
+    padding: 5px;
     display: inline-block;
-    font-size: 15px;
-    margin-left: -160px ;
-    margin-top: 5;
+    font-size: 16px;
+}
+#Disc{
+    color: red;
+    margin-left: 10px;
 }
 #buyBtn{
     width: 90%;
     margin-top: 20px;
     height: 40px;
-    background-color: gray;
-    color: black;
+    background-color: #14202E;
+    color: rgb(230, 230, 230);
+    position: relative;
+    margin: 10px;
+border-radius: 5px;
+    bottom: -20px;
+    font-size: 20px;
 
 }
 #continueShopping{
     width: 90%;
     margin-top: 20px;
     height: 40px;
-    background-color: white;
+    background-color: white;   
+    border-radius: 5px;
+
     color: black;
     cursor: pointer;
+    font-size: 20px;
+    position: relative;
+    bottom: 0px;
+
 
 }
 h2{
@@ -282,10 +442,12 @@ i{
     cursor: pointer;
   }
 #logbtn{
-    width: 30%;
-    height: 30px;
+    width: 40%;
+    height: 32px;
     background-color: white;
     font-family: myFont;
+    font-size: 18px;
+    border-radius: 5px;
 }
 #logbtn:hover {
     background-color: black;
@@ -309,6 +471,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 #product_fav {
@@ -369,6 +532,16 @@ footer {
 #bestSeller{
     display: flex;
    justify-content: center;
-   scale: 1.2;
+   scale: 1.1;
 padding: 100px;   
-margin-bottom: 0; }   
+margin-bottom: 0; }  
+
+#sideLogo{
+    width: 250px;
+    height: 150px;
+    z-index: 0;
+    position: absolute;
+    top: -25px;
+    left: 80px;
+    justify-content: center;
+}
