--- a/cart/cartstyle.css
+++ b/cart/cartstyle.css
@@ -143,7 +143,7 @@ end
     width: 70%;
     height:170px;
     /* background-color: #f4a303; */
-    background-color: #d4d4d4;
+    background-color: white;
     border-radius: 0 5px 5px 0;
     /* border: 2px solid #14202E ; */
     margin-top: 20px;
@@ -166,8 +166,8 @@ end
     justify-content: center;
     left: 18.9%;
     top: -18px;
-    background-color: #14202e94  ;
-    color: #d4d4d4;
+    background-color: #14202edd  ;
+    color: white;
     padding: 4px;
     margin-bottom: 10px;
     font-size: 18px;
@@ -240,7 +240,7 @@ end
     text-align: center;
 }
 #sidediv{
-    background-color: #d4d4d4;
+    background-color: #ffffff84;
     height: 400px;
     width: 27.5%;
     display: inline-block;
